attendance system is updated