@@ -22,6 +22,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -37,6 +38,7 @@ public class SecurityConfig {
         return NoOpPasswordEncoder.getInstance();
     }
 
+
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
@@ -46,61 +48,117 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration configuration
+    ) throws Exception {
         return configuration.getAuthenticationManager();
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+
         http
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
                 .authenticationProvider(authenticationProvider())
+
                 .authorizeHttpRequests(auth -> auth
-                        // 1. PUBLIC & PREFLIGHT (Always First)
+
+                        /* ============================================================
+                           1. PUBLIC & PREFLIGHT ENDPOINTS (FIX FOR CORS ERRORS)
+                           ============================================================ */
+                        // Allow all OPTIONS requests (preflight) so the browser doesn't block PATCH/POST
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/api/auth/**", "/error").permitAll()
-                        .requestMatchers("/api/users/forgot-password/**", "/api/users/reset-password/**").permitAll()
+                        .requestMatchers("/api/users/forgot-password/**",
+                                "/api/users/reset-password/**").permitAll()
+                        .requestMatchers("/api/dashboard/**").permitAll()
 
-                        // 2. DASHBOARD (Must be above global /api/**)
-                        .requestMatchers("/api/dashboard/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT", "ROLE_EMPLOYEE", "ADMIN", "ACCOUNTANT", "EMPLOYEE")
+                        /* ============================================================
+                           2. ROLE & USER MANAGEMENT
+                           ============================================================ */
+                        .requestMatchers(HttpMethod.GET, "/api/roles/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+                        .requestMatchers("/api/roles/**").hasAuthority("ROLE_ADMIN")
 
-                        // 3. LEAVE MANAGEMENT
-                        .requestMatchers(HttpMethod.GET, "/api/employee-leaves/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT", "ROLE_EMPLOYEE", "ADMIN", "ACCOUNTANT", "EMPLOYEE")
-                        .requestMatchers(HttpMethod.PATCH, "/api/employee-leaves/**").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
-                        .requestMatchers(HttpMethod.POST, "/api/employee-leaves/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE", "ADMIN", "EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/api/users/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+                        .requestMatchers(HttpMethod.POST, "/api/users/**").hasAuthority("ROLE_ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/users/**").hasAuthority("ROLE_ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/users/**").hasAuthority("ROLE_ADMIN")
 
-                        // 4. ATTENDANCE
-                        .requestMatchers("/api/attendance/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE", "ADMIN", "EMPLOYEE")
+                        /* ============================================================
+                           3. LEAVE MANAGEMENT (ADMIN & EMPLOYEE)
+                           ============================================================ */
+                        .requestMatchers(HttpMethod.GET, "/api/leave-types/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE")
+                        .requestMatchers(HttpMethod.GET, "/api/leave-balance/employee/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE")
+                        // Ensure ADMIN can perform PATCH/PUT/DELETE on leaves
+                        .requestMatchers("/api/employee-leaves/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_EMPLOYEE")
+                        .requestMatchers("/api/tax-slabs/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+                        /* ============================================================
+                           4. SHARED MODULES (ADMIN, ACCOUNTANT, EMPLOYEE)
+                           ============================================================ */
+                        .requestMatchers("/api/attendance/**")
+                        .hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT", "ROLE_EMPLOYEE")
 
-                        // 5. GLOBAL FALLBACKS (Always Last)
-                        .requestMatchers(HttpMethod.GET, "/api/**").authenticated()
-                        .requestMatchers(HttpMethod.POST, "/api/**").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/api/**").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
-                        .requestMatchers(HttpMethod.PATCH, "/api/**").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/**").hasAnyAuthority("ROLE_ADMIN", "ADMIN")
+                        /* ============================================================
+                           5. ACCOUNTING & MANAGEMENT (ADMIN, ACCOUNTANT)
+                           ============================================================ */
+                        .requestMatchers("/api/payrolls/**", "/api/reports/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
 
+                        .requestMatchers(HttpMethod.GET,
+                                "/api/employees/**",
+                                "/api/departments/**",
+                                "/api/designations/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+
+                        .requestMatchers(HttpMethod.GET,
+                                "/api/salary-components/**",
+                                "/api/grade-salary-components/**",
+                                "/api/employee-salary-components/**").hasAnyAuthority("ROLE_ADMIN", "ROLE_ACCOUNTANT")
+
+                        /* ============================================================
+                           6. ROLE-SPECIFIC PANELS
+                           ============================================================ */
+                        .requestMatchers("/api/employee/**").hasAuthority("ROLE_EMPLOYEE")
+                        .requestMatchers("/api/accountant/**").hasAuthority("ROLE_ACCOUNTANT")
+                        .requestMatchers("/api/admin/**").hasAuthority("ROLE_ADMIN")
+
+                        /* ============================================================
+                           7. ADMIN ONLY (WRITE ACCESS & FALLBACK)
+                           ============================================================ */
+                        .requestMatchers("/api/employees/**",
+                                "/api/departments/**",
+                                "/api/designations/**",
+                                "/api/salary-components/**").hasAuthority("ROLE_ADMIN")
+
+                        .requestMatchers("/api/**").hasAuthority("ROLE_ADMIN")
+
+                        /* ============================================================
+                           8. FINAL FALLBACK
+                           ============================================================ */
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        // Allow the React/Vite development ports
-        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:3000", "http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        // Using "*" for headers is safest to avoid CORS mismatch
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "x-auth-token"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000"
+        ));
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS" // Added PATCH here
+        ));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
